Use ngif directive to ensure that quote details are only visible if user clicks on view quote button and change font-family to enhance the legibility of the text

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,5 +2,5 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 body {
-  font-family: 'Baloo 2', cursive;
+  font-family: 'Gotu', sans-serif;
 }
